--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto&display=swap");
 
 * {
   margin: 0;
@@ -29,11 +29,22 @@
   justify-content: center;
   align-items: center;
   width: 75%;
+  background-color: #e8ebe4;
 }
 
 .principal img {
+  padding: 20px;
   margin-bottom: 0;
   width: 20%;
+}
+
+.titulo {
+  font-size: 45px;
+  font-family: "Roboto", sans-serif;
+}
+
+.parrafoprincipal {
+  font-size: 19px;
 }
 
 menu {
