--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto&display=swap");
 
 * {
   margin: 0;
@@ -10,8 +10,36 @@
   flex-wrap: nowrap;
 }
 
+.principal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+  flex-basis: 80%;
+  flex-shrink: 1;
+  background-color: #e8ebe4;
+}
+
+.principal img {
+  padding-bottom: 20px;
+  width: 250px;
+}
+
+.titulo {
+  font-size: 45px;
+  font-family: "Roboto", sans-serif;
+}
+
+.parrafoprincipal {
+  font-size: 16px;
+  font-family: "Open Sans", sans-serif;
+}
+
 .menuContactos {
-  width: 25%;
+  flex-grow: 1;
+  flex-basis: 20%;
+  flex-shrink: 1;
   border: 1px solid black;
   margin: 0;
   padding: 0;
@@ -20,20 +48,7 @@
 .contacto {
   display: flex;
   flex: 0 0 20rem;
-  border: 1px solid black;
-}
-
-.principal {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 75%;
-}
-
-.principal img {
-  margin-bottom: 0;
-  width: 20%;
+  /*border: 1px solid black;*/
 }
 
 menu {
@@ -48,7 +63,6 @@ menu ul {
   flex-direction: column;
 }
 menu li {
-  padding: 1em;
   list-style: none;
 }
 menu a {
@@ -61,16 +75,109 @@ menu a:hover {
 }
 
 .boxPrinc {
-  flex-direction: column-reverse;
-  justify-content: space-around;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
   border: 1px solid black;
 }
 
-.boxPrinc div {
+.iconos {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-grow: 1;
+  flex-basis: 30%;
+  flex-shrink: 1;
 }
 
-#circle {
+.contacto {
+  display: flex;
+  flex-grow: 1;
+  flex-basis: 70%;
+  flex-shrink: 1;
+}
+
+.imagen {
+  display: flex;
+  padding-left: 10px;
+  padding-top: 10px;
+}
+
+.continfo {
+  padding: 10px;
+  flex-grow: 1;
+  flex-basis: 70%;
+  flex-shrink: 1;
+}
+
+.continfo h5 {
+  margin-bottom: 0;
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+}
+
+.continfo p {
+  margin: 0;
+  font-size: 10px;
+  font-family: "Open Sans", sans-serif;
+}
+
+.circle {
+  display: flex;
   background: lightblue;
-  border-radius: 50%;
-  width: 40px;
+  border-radius: 90%;
+  width: 35px;
+  height: 35px;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+  flex-basis: 30%;
+  flex-shrink: 1;
+}
+
+.contactos {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  border: 1px solid black;
+}
+
+.imagen2 {
+  display: flex;
+  padding-left: 10px;
+  padding-top: 10px;
+}
+
+.contsinfo {
+  padding: 10px;
+  flex-grow: 1;
+  flex-basis: 70%;
+  flex-shrink: 1;
+}
+
+.contsinfo h5 {
+  margin-bottom: 0;
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+}
+
+.contsinfo p {
+  margin: 0;
+  font-size: 14px;
+  font-family: "Open Sans", sans-serif;
+}
+
+.circle2 {
+  display: flex;
+  background: lightblue;
+  border-radius: 90%;
+  width: 45px;
+  height: 45px;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+  flex-basis: 30%;
+  flex-shrink: 1;
 }
